# prodject_tomogoch_ii

./: .gitignore  docker-compose.yml  pyproject.toml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  chat.py  memory.py  pet.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: base.py  session.py
backend/app/migrations/versions/: 74ecf4a3cc59_init.py
backend/app/models/: conversation.py  memory.py  pet.py  user.py
backend/app/providers/: llm.py
backend/app/schemas/: auth.py  chat.py  memory.py  pet.py
backend/app/services/: chat.py  memory.py  pet.py  pet_rules.py
frontend/src/api/: auth.ts  chat.ts  http.ts  memory.ts  pet.ts
