[tool.poetry]
name = "prodject-tomogoch-ii"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false  # (я добавил)

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.110"
uvicorn = "^0.29"
sqlalchemy = "^2.0"
asyncpg = "^0.29"
alembic = "^1.13"
pydantic-settings = "^2.2"
pyjwt = "^2.8"
passlib = {extras = ["bcrypt"], version = "^1.7"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
